--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,14 @@
   <form #addressForm="ngForm" appIdentityRevealed>
     <div [hidden]="addressForm.submitted">
       <div class="cross-validation" [class.cross-validation-error]="addressForm.errors?.identityRevealed && (addressForm.touched || addressForm.dirty)">
+
         <div class="form-group">
           <label for="name">First Name</label>
           <input id="name" name="name" class="form-control" required minlength="2" [(ngModel)]="address.name" #name="ngModel">
 
           <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
 
-            <div *ngIf="name.errors.required">
+            <div *ngIf="name.errors.required" class="cross-validation">
               Name is required.
             </div>
             <div *ngIf="name.errors.minlength">
