--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,14 @@ h3 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
+.container {
+  // border-radius: 25px;
+  // border: 1px solid gray;
+  padding: 10px;
+  outline: 1px solid midnightblue;
+  width: 400px;
+}
+
 body {
   margin: 2em;
 }
